refactored APIClient.java